--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,4 +25,10 @@ dependencies {
 
     compile 'org.xutils:xutils:3.3.34'
     compile 'com.google.code.gson:gson:2.3.1'
+
+    //AndroidViewAnimations start
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    //AndroidViewAnimations end
 }
