--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -30,4 +30,11 @@ dependencies {
 
     compile 'com.liaoinstan.springview:library:1.2.5'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
+    //多彩进度条
+    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    //AndroidViewAnimations start
+    //compile 'com.nineoldandroids:library:2.4.0'
+    //compile 'com.daimajia.easing:library:1.0.1@aar'
+    //compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    //AndroidViewAnimations end
 }
