--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     compile project(':easeui')
     compile project(':common')
     compile project(':library_version')
-
     compile 'com.liaoinstan.springview:library:1.2.5'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     //多彩进度条
@@ -37,4 +36,5 @@ dependencies {
     //compile 'com.daimajia.easing:library:1.0.1@aar'
     //compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     //AndroidViewAnimations end
+    compile project(':jpush')
 }
