--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -12,12 +12,26 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    //配置keystore签名 start
+    signingConfigs {
+        myConfig {
+            storeFile file("liaoinstan.jks")
+            storePassword "liaoinstan"
+            keyAlias "liaoinstan"
+            keyPassword "liaoinstan"
+        }
+    }
     buildTypes {
+        debug {
+            signingConfig signingConfigs.myConfig
+        }
         release {
+            signingConfig signingConfigs.myConfig//不要忘了要在release的时候加入我么的签名配置信息
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //配置keystore签名 end
 }
 
 dependencies {
@@ -37,4 +51,5 @@ dependencies {
     //compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     //AndroidViewAnimations end
     compile project(':jpush')
+    compile project(':sharesdk')
 }
