--- a/tvcust/src/main/AndroidManifest.xml
+++ b/tvcust/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".ui.activity.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".ui.activity.TestActivity"
+            android:theme="@style/AppTheme.NoTitleFullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,9 +58,6 @@
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.LoadUpActivity"
-            android:theme="@style/AppTheme.NoTitleFullscreen" />
-        <activity
-            android:name=".ui.activity.TestActivity"
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.ReqfixActicity"
