--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':tvcust', ':tvserv', ':common', ':library_version', ':easeui', ':jpush', ':sharesdk'
+include ':tvcust', ':tvserv', ':common', ':library_version', ':jpush', ':sharesdk'
