--- a/tvcust/src/main/AndroidManifest.xml
+++ b/tvcust/src/main/AndroidManifest.xml
@@ -35,16 +35,16 @@
         <activity
             android:name=".ui.activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ui.activity.TestActivity"
-            android:theme="@style/AppTheme.NoTitleFullscreen">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.TestActivity"
+            android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.StartUpActivity"
             android:label="@string/title_activity_start_up"
@@ -103,7 +103,19 @@
         <activity
             android:name=".ui.activity.ModifyPswActivity"
             android:label="@string/title_activity_modify_psw"
-            android:theme="@style/AppTheme.NoTitleFullscreen"></activity>
+            android:theme="@style/AppTheme.NoTitleFullscreen" />
+        <activity
+            android:name=".ui.activity.EvaDetailActivity"
+            android:label="@string/title_activity_eva_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activity.EvaActivity"
+            android:label="@string/title_activity_eva"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activity.ComplainActivity"
+            android:label="@string/title_activity_complain"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
