--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://jitpack.io" }
+//        mavenCentral()
+        maven { url "https://jitpack.io" }  //photoview
         jcenter()
     }
 }
