--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,10 +25,14 @@ dependencies {
 
     compile 'org.xutils:xutils:3.3.34'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     //AndroidViewAnimations start
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     //AndroidViewAnimations end
+
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+//    compile 'com.github.chrisbanes:PhotoView:1.2.6'
 }
