--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -45,14 +45,13 @@ dependencies {
     compile project(':library_version')
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     //多彩进度条
-    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    //    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     //AndroidViewAnimations start
     //compile 'com.nineoldandroids:library:2.4.0'
     //compile 'com.daimajia.easing:library:1.0.1@aar'
     //compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     //AndroidViewAnimations end
-    //圆形进度按钮
-    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+
     //圆形ImageVIew
     compile 'de.hdodenhof:circleimageview:2.0.0'
     //流式标签布局
@@ -60,5 +59,12 @@ dependencies {
     //SpringView
     compile project(':spring')
     //多彩TabView
-    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.6@aar'
+    //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.6@aar'
+    //wheelview
+    compile 'com.wx.wheelview:wheelview:1.3.3'
+
+    //圆形进度按钮
+//    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+//    compile project(':progressbutton')
+
 }
