--- a/tvserv/build.gradle
+++ b/tvserv/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:23.3.0'
     //    compile project(':common')
-    compile project(':library_version')
+//    compile project(':library_version')
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
 }
