--- a/tvcust/src/main/AndroidManifest.xml
+++ b/tvcust/src/main/AndroidManifest.xml
@@ -28,20 +28,14 @@
     <application
         android:name=".app.TVDemoApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/applogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.activity.TestActivity"
             android:theme="@style/AppTheme.NoTitleFullscreen" />
@@ -51,7 +45,13 @@
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.LoadUpActivity"
-            android:theme="@style/AppTheme.NoTitleFullscreen" />
+            android:theme="@style/AppTheme.NoTitleFullscreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.activity.ReqfixActicity"
             android:label="@string/title_activity_reqfix"
@@ -98,8 +98,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoTitleFullscreen" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoTitleFullscreen"></activity>
         <activity
             android:name=".ui.activity.ModifyPswActivity"
             android:label="@string/title_activity_modify_psw"
