--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -37,8 +37,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+//    compile 'com.android.support:design:23.3.0'
+//    compile 'com.android.support:cardview-v7:23.3.0'
     compile project(':common')
     compile project(':jpush')
     compile project(':sharesdk')
@@ -67,4 +67,6 @@ dependencies {
 //    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
 //    compile project(':progressbutton')
 
+    //事件总线
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
