--- a/tvcust/src/main/AndroidManifest.xml
+++ b/tvcust/src/main/AndroidManifest.xml
@@ -151,7 +151,9 @@
         <activity
             android:name=".ui.activity.CompActivity"
             android:label="@string/title_activity_comp"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
         <activity
             android:name=".ui.activity.ModifyPhoneActivity"
             android:label="@string/title_activity_modify_phone"
