--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 allprojects {
     repositories {
 //        mavenCentral()
-        maven { url "https://jitpack.io" }  //photoview
+        maven { url "https://jitpack.io" }  //photoview //Mpcharts
         jcenter()
     }
 }
