--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.sobey.tvcust"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.02"
         multiDexEnabled true
     }
     //配置keystore签名 start
@@ -68,5 +68,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     //MPCharts
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
-    compile project(':zqrlibrary')
+    //zbar
+    compile 'me.dm7.barcodescanner:zbar:1.7.2'
+    //compile 'me.dm7.barcodescanner:zxing:1.8.4'
 }
