--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
@@ -8,8 +9,8 @@ android {
         applicationId "com.sobey.tvcust"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.02"
+        versionCode 5
+        versionName "1.0.05"
         multiDexEnabled true
     }
     //配置keystore签名 start
@@ -65,10 +66,14 @@ dependencies {
     //    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     //    compile project(':progressbutton')
     //事件总线
-    compile 'org.greenrobot:eventbus:3.0.0'
+    //compile 'org.greenrobot:eventbus:3.0.0'
     //MPCharts
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     //zbar
-    compile 'me.dm7.barcodescanner:zbar:1.7.2'
+    compile 'me.dm7.barcodescanner:zbar:1.8.4'
     //compile 'me.dm7.barcodescanner:zxing:1.8.4'
+
+    //permission
+//    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
+//    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
 }
