--- a/common/build.gradle
+++ b/common/build.gradle
@@ -40,4 +40,7 @@ dependencies {
 
 //    compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'org.greenrobot:eventbus:3.0.0'
+
+    //mp3recorder
+    compile 'com.czt.mp3recorder:library:1.0.4'
 }
