--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.sobey.tvcust"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 11
-        versionName "1.0.15"
+        versionCode 14
+        versionName "1.0.19"
         multiDexEnabled true
     }
     //配置keystore签名 start
@@ -80,4 +80,6 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     //recycleView header
     compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
+    //bughd
+    compile 'im.fir:fir-sdk:latest.integration@aar'
 }
