--- a/common/build.gradle
+++ b/common/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     //mp3recorder
     compile 'com.czt.mp3recorder:library:1.0.4'
+
+    //3方裁剪
+    compile 'com.yalantis:ucrop:2.1.2'
 }
