--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.sobey.tvcust"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 17
-        versionName "1.0.24"
+        versionCode 22
+        versionName "1.0.29"
         multiDexEnabled true
     }
     //配置keystore签名 start
@@ -82,4 +82,6 @@ dependencies {
     compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
     //bughd
     compile 'im.fir:fir-sdk:latest.integration@aar'
+    //友盟统计
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
