--- a/tvcust/src/main/AndroidManifest.xml
+++ b/tvcust/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
 
         <activity
             android:name=".ui.activity.HomeActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -71,10 +72,12 @@
         <activity android:name=".ui.activity.PiePolylineChartActivity"></activity>
         <activity
             android:name=".ui.activity.StartUpActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_start_up"
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.LoadUpActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoTitleFullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -84,174 +87,217 @@
         </activity>
         <activity
             android:name=".ui.activity.ReqfixActicity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_reqfix"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ReqDescribeActicity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_reqfixdescribe"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ReqDescribeOnlyActicity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_reqfixdescribeonly"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.QuestionActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_question"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.DeviceDetailActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_device_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MsgSysActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_msgsys"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MsgOrderActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_msgorder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MsgSelectActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_msgselect"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.OrderProgActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_order_prog"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.VideoRecorderActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_video_recorder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.PhotoActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_photo"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.VideoActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_video"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.WebActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_web"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.WebMsgSysActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_webmsgsys"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.CountOrderActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_count_order"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.CountQuestionActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_countquestion"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.CountWarningActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_countwarning"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.DeviceListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_device_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.WarningListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_warning_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.FindPswActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_find_psw"
             android:theme="@style/AppTheme.NoTitleFullscreen" />
         <activity
             android:name=".ui.activity.EvaDetailActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_eva_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.EvaActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_eva"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ComplainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_complain"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.SettingActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_setting"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.InfoDetailActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_info_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.SignActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_sign"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.SignListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_sign_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.VersionActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_version"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MeDetailActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_me_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.OrderDetailActivity"
             android:label="@string/title_activity_order_detail"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.OrderAllocateActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_order_allocate"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.OrderAllocateOnlyActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_order_allocateonly"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.CompActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_comp"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ModifyPhoneActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_modify_phone"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.SettingSecurityActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_setting_security"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ModifyPswActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_modify_psw"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.AssistActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_assist"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.CopyActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_copy"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.SelectUserActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_select_user"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.ScannerActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_scanner"
             android:theme="@style/AppTheme.NoTitleFullscreen"></activity>
         <activity
             android:name=".ui.activity.SelectStationActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_selectstation"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.activity.FeedBackActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_feedback"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
