--- a/tvcust/build.gradle
+++ b/tvcust/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.sobey.tvcust"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 47
-        versionName "1.1.09"
+        versionCode 51
+        versionName "1.1.13"
         multiDexEnabled true
     }
     //配置keystore签名 start
@@ -84,4 +84,6 @@ dependencies {
     compile 'im.fir:fir-sdk:latest.integration@aar'
     //友盟统计
     compile 'com.umeng.analytics:analytics:latest.integration'
+    //预览播放图片
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
 }
