--- a/jpush/src/main/AndroidManifest.xml
+++ b/jpush/src/main/AndroidManifest.xml
@@ -126,7 +126,7 @@
 
         <!-- Required . Enable it you can get statistics data with channel -->
         <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <meta-data android:name="JPUSH_APPKEY" android:value="cf02678d414cbce2cbf71e52" /> <!-- </>值来自开发者平台取得的AppKey-->
+        <meta-data android:name="JPUSH_APPKEY" android:value="1d60cc4df362dfff92e2dfe1" /> <!-- </>值来自开发者平台取得的AppKey--><!--cf02678d414cbce2cbf71e52-->
 
 
     </application>
