--- a/sharesdk/local.properties
+++ b/sharesdk/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 28 17:44:37 CST 2016
-sdk.dir=D\:\\LZ\\sdk_all
+#Thu Oct 20 16:29:11 CST 2016
+sdk.dir=E\:\\LZ\\sdk
